--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.4",
+    "ethers": "^6.13.4",
     "framer-motion": "^11.13.1",
     "next": "^14.1.4",
     "react": "^18.2.0",
